--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
                       <li class="nav-item"><a class="nav-link" href="./pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Servicios</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Portafolio</a></li>                      
+                      <li class="nav-item"><a class="nav-link" href="./pages/portafolio.html">Portafolio</a></li>                      
                       <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                   </ul>
               </div>
@@ -46,7 +46,7 @@
     </header>
 
     <main>  
-      <h1 class="animate__animated animate__pulse" >Bienvenidos</h1>
+      <h1 class="animate__animated animate__pulse" >Bienvenidos</h1>      
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
