--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -34,7 +34,7 @@
                       <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">Servicios</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Portafolio</a></li>                      
+                      <li class="nav-item"><a class="nav-link" href="../pages/portafolio.html">Portafolio</a></li>                      
                       <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                   </ul>
               </div>
