--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -32,9 +32,9 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Sobre mi</a></li>
+                      <li class="nav-item"><a class="nav-link" href="../pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">Servicios</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Portafolio</a></li>                      
+                      <li class="nav-item"><a class="nav-link" href="../pages/portafolio.html">Portafolio</a></li>                      
                       <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                   </ul>
               </div>
