Pagina contacto, primera versión

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -22,9 +22,9 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-              <a href="index.html" class="navbar-brand">
+              <a href="../index.html" class="navbar-brand">
                 <!-- Logo Image -->
-                <img src="images/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+                <img src="../images/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
                 <!-- Logo Text -->
                 <span class="">Francisco FM</span>
               </a>
@@ -35,7 +35,7 @@
                       <li class="nav-item"><a class="nav-link" href="../pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">Servicios</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/portafolio.html">Portafolio</a></li>                      
-                      <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                      <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
                   </ul>
               </div>
           </div>
