--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                       <li class="nav-item"><a class="nav-link" href="./pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Servicios</a></li>
                       <li class="nav-item"><a class="nav-link" href="./pages/portafolio.html">Portafolio</a></li>                      
-                      <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                      <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
                   </ul>
               </div>
           </div>
