--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -22,9 +22,9 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
-              <a href="index.html" class="navbar-brand">
+              <a href="../index.html" class="navbar-brand">
                 <!-- Logo Image -->
-                <img src="images/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+                <img src="../images/logo.png" width="45" alt="" class="d-inline-block align-middle mr-2">
                 <!-- Logo Text -->
                 <span class="">Francisco FM</span>
               </a>
@@ -34,8 +34,8 @@
                       <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/sobre.html">Sobre mi</a></li>
                       <li class="nav-item"><a class="nav-link" href="../pages/servicios.html">Servicios</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Portafolio</a></li>                      
-                      <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                      <li class="nav-item"><a class="nav-link" href="../pages/portafolio.html">Portafolio</a></li>                      
+                      <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
                   </ul>
               </div>
           </div>
@@ -43,7 +43,7 @@
     </header>
 
     <main>  
-      <h1 class="animate__animated animate__bounce" >Portafolio</h1>
+      <h1 class="animate__animated animate__heartBeat" >Portafolio</h1>
       
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
