--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
     <!-- iconos redes -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- animaciones -->
@@ -55,7 +56,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card container_foto">
+          <div class="card">
             <img src="https://placedog.net/640/480?id=4" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Servicio 2</h5>
