seo, keywords, mixin sass

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="formas de contacto">
+    <meta name="keywords" content="Contacto, Dudas, Sugerencias, comunicación, dudas">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
     <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/>
@@ -89,7 +91,7 @@
     
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn btn-contact">Enviar</button>
+                                    <button type="submit" class="btn btnContacto">Enviar</button>
                                 </div>
                             </div>
                         </fieldset>
