--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="información de los servicios que se brindan">
+    <meta name="keywords" content="servicios, desarrollo, consultoria">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
     <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/> 
