--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Información sobre el autor">
+    <meta name="keywords" content="sobre mi, about me, información">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
     <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/>    
