--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="información sobre los proyectos en los que he contribuido">
+    <meta name="keywords" content="portafolio, proyectos, colaboraciones">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
     <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/>
