--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="información sobre los proyectos en los que he contribuido">
+    <meta name="description" content="Información sobre los proyectos en los que he contribuido">
     <meta name="keywords" content="portafolio, proyectos, colaboraciones">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
@@ -45,8 +45,7 @@
       </nav>
     </header>
 
-    <main>        
-      
+<main>
 <div class="container mx-auto mt-4">
   <div class="row">
     <div class="col-md-4">
@@ -197,48 +196,47 @@
   </div>
 </div>
 </div>
-    </main>
+</main>
     
-  <footer class="bg-dark text-center text-white">
+<footer class="bg-dark text-center text-white">
   <!-- Grid container -->
-  <div class="container p-4 pb-0">
+  <div class="containerMedia">
     <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-google"></i>
-      </a>
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-      <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-        <i class="fab fa-github"></i>
-      </a>
+    <section class="">
+    <!-- Facebook -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <!-- Twitter -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <!-- Google -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-google"></i>
+    </a>
+    <!-- Instagram -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <!-- Linkedin -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+    <!-- Github -->
+    <a class="btn btn-outline-light btn-floating" href="#!" role="button">
+      <i class="fab fa-github"></i>
+    </a>
     </section>
     <!-- Section: Social media -->
   </div>
   <!-- Grid container -->
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center containerCopy" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright FFM
     <a class="text-white" href="#"></a>
   </div>
   <!-- Copyright -->
 </footer>
-
 </body>
 </html>
