--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <main>  
+  <main>  
       <h1 class="animate__animated animate__bounce" >Servicios</h1>
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
@@ -86,48 +86,47 @@
         </div>
       </div>
       
-    </main>
+  </main>
     
   <footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
+    <!-- Grid container -->
+    <div class="containerMedia">
+      <!-- Section: Social media -->
+      <section class="">
       <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-facebook-f"></i>
       </a>
       <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-twitter"></i>
       </a>
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-google"></i>
       </a>
       <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-instagram"></i>
       </a>
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-github"></i>
       </a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright FFM
-    <a class="text-white" href="#"></a>
-  </div>
-  <!-- Copyright -->
-</footer>
-
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class="text-center containerCopy" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright FFM
+      <a class="text-white" href="#"></a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 </html>
