--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Francisco Franco Martinez">
     <meta name="description" content="Desarrollo de páginas Web">
-    <meta name="keywords" content="Web, Developer, HTML, CSS, Software">
+    <meta name="keywords" content="web, developer, html, css, software">
     <title>Me+FrancoFM</title>    
     <link rel="shortcut icon" type="image/icon" href="images/favicon.ico"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -80,45 +80,45 @@
     </main>
     
   <footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
+    <!-- Grid container -->
+    <div class="containerMedia">
+      <!-- Section: Social media -->
+      <section class="">
       <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-facebook-f"></i>
       </a>
       <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-twitter"></i>
       </a>
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-google"></i>
       </a>
       <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-instagram"></i>
       </a>
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-github"></i>
       </a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright FFM
-    <a class="text-white" href="#"></a>
-  </div>
-  <!-- Copyright -->
-</footer>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class="text-center containerCopy" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright FFM
+      <a class="text-white" href="#"></a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 
 </body>
 </html>
