--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Información sobre el autor">
-    <meta name="keywords" content="sobre mi, about me, información">
+    <meta name="keywords" content="sobre mi, about me, información, blog personal">
     <meta name="author" content="Francisco Franco Martinez">
     <title>Me+FrancoFM</title>
     <link rel="shortcut icon" type="image/icon" href="../images/favicon.ico"/>    
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <main>  
+  <main>  
       <h1 class="animate__animated animate__rubberBand" >Sobre mi</h1>
       <div class="circular--landscape" >          
           <img src="https://placedog.net/840/680?id=10" />
@@ -58,48 +58,47 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorum, sapiente rerum quos consequatur modi, molestias reiciendis at, necessitatibus aperiam consectetur laboriosam a quo velit consequuntur? Consequatur alias placeat quae!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus debitis natus sequi laudantium. Ducimus aliquid similique illum deleniti consectetur excepturi iusto, soluta sed officia qui quas facere eveniet doloribus laudantium.</p>
       </div>
-    </main>    
+  </main>    
     
   <footer class="bg-dark text-center text-white">
-  <!-- Grid container -->
-  <div class="container p-4 pb-0">
-    <!-- Section: Social media -->
-    <section class="mb-4">
+    <!-- Grid container -->
+    <div class="containerMedia">
+      <!-- Section: Social media -->
+      <section class="">
       <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-facebook-f"></i>
       </a>
       <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-twitter"></i>
       </a>
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-google"></i>
       </a>
       <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-instagram"></i>
       </a>
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-linkedin-in"></i>
       </a>
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+      <a class="btn btn-outline-light btn-floating" href="#!" role="button">
         <i class="fab fa-github"></i>
       </a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright FFM
-    <a class="text-white" href="#"></a>
-  </div>
-  <!-- Copyright -->
-</footer>
-
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class="text-center containerCopy" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright FFM
+      <a class="text-white" href="#"></a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 </html>
